# timescale-rs

./: .env  .env.example  .gitignore  Cargo.toml  LICENSE  README.md  connect.sh  docker-compose.yml
common/: Cargo.toml
common/src/: lib.rs
data-population/: Cargo.toml
data-population/src/: main.rs
data_population/: Cargo.toml
data_population/benches/: bench_data_population.rs
data_population/src/: lib.rs  main.rs
k6/: k6.js  run.sh
schema/: 000.initial.up.sql
stock-api/: Cargo.toml
stock-api/src/: main.rs
