[workspace]
members = ["common", "data-population"]

resolver = "2"

[profile.release]
stripe = true # strip symbols
opt-level = "s" # size
lto = true
codegen-units = 1

[workspace.dependencies]
sqlx = { version = "0.8.2", features = ["postgres", "runtime-tokio-rustls", "derive", "macros", "chrono"] }
chrono = "0.4.38"
stopwatch = "0.0.7"