[package]
name = "common"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
bigdecimal = { version = "0.4.6", features = ["serde"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
