[package]
name = "data-population"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
stopwatch = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

common = { path = "../common" }