[package]
name = "data_population"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
sqlx = { workspace = true }
chrono = { workspace = true }
stopwatch = { workspace = true }
tokio = { workspace = true }
dotenv = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

common = { path = "../common" }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["async", "async_tokio"] }

[[bench]]
name = "bench_data_population"
harness = false
